feat(gateway): implement list submissions api (#208)
* feat(gateway): implement list submissions api

* feat(gateway): [wip] create test code

* fix(gateway): fix small
